<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_switch"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="com.systutorials.blackswitch.MainSwitchActivity">


    <TextView
        android:id="@+id/TextViewState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="Disconnected"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="24sp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:orientation="horizontal"

        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/s1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="24sp" />


        <android.support.v7.widget.SwitchCompat
            android:id="@+id/toggleButton1"
            android:layout_width="70dp"
            android:layout_height="51dp"
            android:layout_weight="1"
            android:checked="true"
            android:switchTextAppearance="@style/TextAppearance.AppCompat.Widget.Switch"

            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:orientation="horizontal"

        >

        <TextView
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:fontFamily="sans-serif-smallcaps"

            android:text="@string/s2"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="24sp" />


        <android.support.v7.widget.SwitchCompat
            android:id="@+id/toggleButton2"
            android:layout_width="70dp"
            android:layout_height="51dp"
            android:layout_weight="1"
            android:checked="true"

            android:switchTextAppearance="@style/TextAppearance.AppCompat.Widget.Switch" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:orientation="horizontal"

        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/s3"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="24sp" />


        <android.support.v7.widget.SwitchCompat
            android:id="@+id/toggleButton3"
            android:layout_width="70dp"
            android:layout_height="51dp"
            android:layout_weight="1"
            android:checked="true"

            android:switchTextAppearance="@style/TextAppearance.AppCompat.Widget.Switch" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:orientation="horizontal"

        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/s4"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="24sp" />


        <android.support.v7.widget.SwitchCompat
            android:id="@+id/toggleButton4"
            android:layout_width="70dp"
            android:layout_height="51dp"
            android:layout_weight="1"
            android:checked="true"

            android:switchTextAppearance="@style/TextAppearance.AppCompat.Widget.Switch" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"

        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/s5"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="24sp" />


        <android.support.v7.widget.SwitchCompat
            android:id="@+id/toggleButton5"
            android:layout_width="70dp"
            android:layout_height="51dp"
            android:layout_weight="1"
            android:checked="true"

            android:switchTextAppearance="@style/TextAppearance.AppCompat.Widget.Switch" />
    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="about_help"
        android:text="About"
        android:textAlignment="center" />

</LinearLayout>
